test/invalid/delimiter_string_unfinished.d
//T error: delimiter_string_unfinished.d:4:9:
//T error: Unexpected end of file.

enum s = q"FOO
FOO
";
